My personal work

--- a/0x01-git/html/about.html
+++ b/0x01-git/html/about.html
@@ -1,2 +1,2 @@
  print about your personal profile in the body
-HTML startup structure 
+chipmunk asked me to write my personal profile in header h1 before the first line of your personal profile. 
